codegen/ui_tests/export_fn_missing_value.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: requires value
 --> ui_tests/export_fn_missing_value.rs:9:13
  |
9 | #[export_fn(name)]
  |             ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_missing_value.rs:19:8
   |
19 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
